# stun-rs

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  main.rs
doc/: todo.txt
lib/: Cargo.toml
lib/src/: constants.rs  error.rs  header.rs  lib.rs  packet.rs  util.rs
lib/src/attrs/: address_attr.rs  change_request.rs  errcode_attr.rs  mod.rs  padding_attr.rs  response_port.rs  xor_address.rs
lib/tests/: packet_test.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  server.rs  signal.rs  stun.rs
