[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stun-rs = { path = "../lib" }
tokio = { version = "1.20", features = ["full"] }
bytes = "1.2"
clap = "3.2"
log = "0.4"
env_logger = "0.9"
